# windeploy-linux

./: .gitignore  BCD  BCD-efi  COPYING  README.md  devenv.nix  main.py  ntfs_acl.py  pyproject.toml  reg_import.sh  requirements.txt  setup_win10.py  unattend.xml.example
postproc/debloat/: debloat.reg  setup.sh
postproc/openssh-server/: openssh_acl.py  setup.sh  sshd_firewall.reg  sshd_service.reg
